--- a/src/style.css
+++ b/src/style.css
@@ -101,3 +101,18 @@ section.content p {
   position: relative;
   z-index: 2;
 }
+
+div.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  display: flex;
+  align-items: end;
+  padding: 2rem;
+  font-size: 6rem;
+  z-index: 3;
+}
