--- a/src/style.css
+++ b/src/style.css
@@ -9,8 +9,8 @@
 }
 
 :root {
-  --primary-color: #ffffff;
-  --secondary-color: #000000;
+  --primary-color: #000000;
+  --secondary-color: #ffffff;
 }
 
 html {
