Revert "color change"
This reverts commit 91980c3d3c134d2cc60e4b94d566c511c7bbeacc.

--- a/src/style.css
+++ b/src/style.css
@@ -9,8 +9,8 @@
 }
 
 :root {
-  --primary-color: #000000;
-  --secondary-color: #ffffff;
+  --primary-color: #ffffff;
+  --secondary-color: #000000;
 }
 
 html {
